--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <div class="header">
         <ul class="nav container">
-            <li class="nav_list" class="nav_list"><a href="#">WILLIAM LEE</a></li>
-            <li class="nav_list"><a href="#">BASED IN TAIWAN</a></li>
-            <li class="nav_list"><a href="#">CURRENTLY FRONT END ENGINEER AT HEXSCHOOL</a></li>
+            <li class="nav_list" class="nav_list">WILLIAM LEE</li>
+            <li class="nav_list">BASED IN TAIWAN</li>
+            <li class="nav_list">CURRENTLY FRONT END ENGINEER AT HEXSCHOOL</li>
             <li class="nav_list text_align_r"><a href="#">CONTACT ME</a></li>
         </ul>
         <div class="header_content container">
@@ -45,16 +45,17 @@
                     <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle-sm.png?raw=true" alt="samll sparkle">
                 </div>
             </div>
-            <div class="intro_pics">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle.png?raw=true" alt="sparkle">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/photographer.png?raw=true" alt="攝影師">
-                <img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people-2.png?raw=true" alt="William">
-            </div>
+            <ul class="intro_pics">
+                <li><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/sparkle.png?raw=true" alt="sparkle"></li>
+                <li><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/photographer.png?raw=true" alt="攝影師"></li>
+                <li><img src="https://github.com/hexschool/2022-web-layout-training/blob/main/2023week2/people-2.png?raw=true" alt="William"></li>
+                
+            </ul>
         </div>
     </div>
     <div class="about">
         <div class="about_content container">
-            <ul class="cards">
+            <ol class="cards">
                 <li class="cards_content">
                     <h3>01</br>Attention to Detail</h3>
                     <p>Meticulous code analysis and optimization.</p>
@@ -71,7 +72,7 @@
                     <h3>04</br>Team Player</h3>
                     <p>Collaborates and shares ideas.</p>
                 </li>
-            </ul>
+            </ol>
             <div class="about_words">
                 <h2>About Me</h2>
                 <p>With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong understanding of user experience design and accessibility. I'm always learning new technologies and techniques to stay up-to-date in the field.</p>
